# ainu-mcp

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  cspell.json  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  refresh-authored-grammar.yml  refresh-reference-data.yml
docs/: AUTHORED-GRAMMAR-REFRESH.md  REFRESHING-DATA.md
etl/: build_d1.py
scripts/: build_authored_grammar_seed.py  mine_ainu_times.py  morphogen-remediate.workflow.js  morphogen.workflow.js  possession-allomorphy-proposal.md  update_authored_grammar_snapshot.py
src/ainu_mcp/: __init__.py  audit.py  config.py  corpus.py  dictionaries.py  gaps.py  glossary.py  grammar.py  localizations.py  research.py  script.py  server.py  site_cache.py  stopwords.py
src/ainu_mcp/data/: authored_grammar_texts.json
worker/: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker/migrations/: 0001_init.sql  0002_frequency.sql  0003_localizations.sql  0004_grammar_public_text.sql
worker/scripts/: apply-grammar-public-text-migration.mjs  load-turso.mjs  load-turso.test.mjs
worker/seed/: README.md  reset.sql
worker/src/: auth.ts  corpus-source.ts  db.ts  github-handler.ts  health.test.mjs  health.ts  index.ts  landing.ts  libsql.ts  mcp.ts  sheets.ts  types.ts
worker/src/grammar/: check.ts  tokenize.ts  types.ts
worker/src/tools/: audit.ts  (+16 more)
worker/test/: grammar.test.mjs  grammar_check.test.mjs  localizations.test.mjs  morpheme-forms.test.mjs  morphology.test.mjs  sources.test.mjs  wiki.test.mjs
(+3 files in other folders)
