[project]
name = "ainu-mcp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mkpoli", email = "git@mkpo.li" }
]
requires-python = ">=3.13"
dependencies = [
    "ainconv>=0.5",
    "boto3>=1.35",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "mcp[cli]>=1.2",
    "python-dotenv>=1.0",
    "pyyaml>=6",
]

[project.scripts]
ainu-mcp = "ainu_mcp:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
