[project]
name = "ainu-mcp"
version = "0.1.0"
description = "Python ETL that builds the Turso (libSQL) reference data for the hosted ainu-mcp Worker"
authors = [
    { name = "mkpoli", email = "git@mkpo.li" }
]
requires-python = ">=3.13"
# Loaders used by etl/build_d1.py. The stdio MCP server was retired in favour of
# the hosted Worker (worker/), so its deps (mcp[cli], ainconv, boto3) are gone.
dependencies = [
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "python-dotenv>=1.0",
    "pyyaml>=6",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
